--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 id="markerA"
             >
                 <a-image
-                    src="assets/asset.jpeg"
+                    src="assets/test.gltf"
                     scale="1 1 1"
                     class="clickable"
                     rotation="-90 0 0"
