Add custom model

--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
-                <a-image
-                    src="assets/test.gltf"
-                    scale="1 1 1"
-                    class="clickable"
-                    rotation="-90 0 0"
-                    gesture-handler
-                ></a-image>
+            <a-entity
+            position="0 0 0"
+            rotation="0 0 0"
+            scale="0.05 0.05 0.05"
+            gltf-model="assets/test.gltf"
+            ></a-entity>
             </a-marker>
 
             <a-entity camera></a-entity>
