Use trex marker

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='../../data/dataNFT/pinball'
+            type='nft' url='trex'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
